--- a/Calculator.html
+++ b/Calculator.html
@@ -10,7 +10,7 @@ font-family: Arial, sans-serif;
 display: flex;
 justify-content: center;
 align-items: centre;
-heigt: 100vh;
+height: 100vh;
 background: pink;
 margin: 0;
 }
@@ -36,7 +36,7 @@ box-sizing: border-box;
 }
 
 .buttons {
-diaplay: grid;
+display: grid;
 grid-template-columns: repeat(4, 1fr);
 gap: 10px;
 }
@@ -121,4 +121,5 @@ document.getElementById("result").value = "error";
 }
 </script>
 </body>
+
 </html>
